tests/ui/typech/enum_variant_params_incomp.lm
enum Foo { A, B(Int32, Boolean) }

fn foo() {
    let a = Foo::B(false, 0);
}
